# brainfuck-plusplus

./: Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
examples/: hello-world2.b  random-number.b  sum.b
src/: brainfuck.rs  cli.rs  errors.rs  main.rs  repl.rs
src/brainfuck/: errors.rs
test/: add_and_sub.b  crazy.b  debug_simbol.b  fib.sh  long.b  loops.b  move_boundaries.b  right_and_left.b
test/interpreter/: add_and_sub.b  right_and_left.b
