[package]
name = "mini-brainfuck"
version = "0.1.3"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
description = "A super small brainfuck interpreter and compiler."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "brainfuck"
path = "src/cli.rs"
test = false
bench = false

[lib]
crate-type = ["cdylib"]
bench = false
doc = true
path = "src/brainfuck.rs"

[dependencies]
structopt = "0.3"
owo-colors = "3.2.0"
